# contents of pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example-packaging-zkatz"
dynamic = ["version"]
dependencies = [
  "numpy"
]
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://zsk4.github.io/example-packaging-zkatz"
"Source Code" = "https://github.com/zkatz/example-packaging-zkatz"

[tool.hatch]
version.path = "src/example_packaging_zkatz/__init__.py"